syntax = "proto3";

package proto; 

option go_package = "orderService.com/go-orderService-grpc;go_orderService_grpc";

service UserService {
	rpc Register (RegisterUserRequest) returns (RegisterUserResponse);
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zipcode = 4;
}

message RegisterUserRequest {
	string username = 1;
	string password = 2; 
  Address address = 3;
}

message RegisterUserResponse {
	  string username = 1;
    Address address = 2;
    string message = 3;
}

// run below command from Order Service
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/user.proto